[tool.poetry]
name = "serholiu.com"
version = "3.0.0"
description = "My blog build system"
authors = ["Serho Liu <serholiu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mistune = "^0.8.4"
tqdm = "^4.59.0"
Cython = "^0.29.22"
Jinja2 = "^2.11.3"
Pygments = "^2.15.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
